--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "firebase": "^10.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.13.0"
+    "react-router-dom": "^6.13.0",
+    "sweetalert2": "^11.7.16"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
